syntax = "proto3";

package hello_grpc;
// option go_package = "proto/user_update";
import "google/protobuf/any.proto";
import "google/protobuf/field_mask.proto";
message  User {
    int32  sex = 1;
}

message UpdateUserRequest {
    User user = 1;
    google.protobuf.FieldMask field_mask = 2;
}